# django-stripe-subscription

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
requirements/: requirements-packaging.txt
stripe_subscription/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
stripe_subscription/migrations/: 0001_initial.py  0002_auto_20210319_0226.py  0003_trial_days.py  0004_alter_plan_price.py
stripe_subscription/static/stripe_subscription/js/: subscribe.js
